# Byob

./: .env.example  .gitignore  PROJECT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  styles.css
.github/workflows/: pages.yml
api/: __init__.py
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 202604290001_initial_schema.py  202605010001_single_instance_schema.py  202605010002_document_assets.py  202605010003_document_dedup_indexes.py  202605010004_document_governance.py  202605010005_user_defined_governance.py
api/app/: __init__.py  config.py  deps.py  main.py  mcp_server.py
api/app/api/: health.py
api/app/core/: __init__.py  clip_embedding.py  embedding.py  es_client.py  health.py  http_urls.py  logging.py  metrics.py  minio_client.py  qdrant_client.py  redis_client.py  rerank.py  security.py
api/app/db/: session.py
api/app/middleware/: __init__.py  auth.py  ratelimit.py  request_context.py  tenant.py
api/app/models/: __init__.py  api_key.py  base.py  chunk.py  document.py  document_asset.py  document_audit_log.py  document_version.py  knowledge_base.py  retrieval_log.py  tenant.py  types.py  usage_daily.py  user.py
api/app/schemas/: __init__.py  agent.py  auth.py  common.py  document.py  health.py  knowledge_base.py  retrieval.py  user.py
api/app/services/: __init__.py  agent_service.py  auth_service.py  user_service.py  (+6 more)
api/scripts/: __init__.py  seed_admin.py
api/tests/: test_agent_service.py  test_auth_phase2.py  test_document_counts.py  test_embedding_client.py  test_health.py  test_markup_parser.py  test_mcp_server.py  test_minio_client.py  test_models.py  test_office_parser.py  test_pdf_parser.py  test_phase3.py  test_phase4.py  test_phase5.py  test_workers.py
docs/: governance.md  mcp.md
docs-site/: index.html
docs/phases/: phase_1_summary.md  phase_2_summary.md  phase_3_summary.md  phase_4_summary.md  phase_5_summary.md  phase_6_summary.md
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/: app-shell.tsx  document-content-viewer.tsx
frontend/lib/: api.ts  chunk-overlap.ts  types.ts  utils.ts
workers/: __init__.py  celery_app.py
workers/chunkers/: __init__.py  semantic_chunker.py
workers/parsers/: __init__.py  base.py  docx_parser.py  image_parser.py  markup_parser.py  mineru_parser.py  pdf_parser.py  registry.py  text_parser.py  xlsx_parser.py
workers/tasks/: document_tasks.py
(+34 files in other folders)
