[project]
name = "kb-platform"
version = "0.1.0"
description = "Enterprise knowledge base platform/BaaS for RAG infrastructure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.2.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
    "elasticsearch[async]>=9,<10",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.17.1",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["api/tests"]
