[project]
name = "byob"
version = "0.1.0"
description = "BYOB self-hosted vector database management for AI Agent retrieval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.2.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "mcp>=1.12.4",
    "prometheus-client>=0.21.0",
    "pwdlib[argon2]>=0.2.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "qdrant-client>=1.17.1",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["api/tests"]
